2008-06-24  Øyvind Kolås  <pippin@o-hand.com>

	* configure.ac: better alignment of list of enabled experimental
	features.

2008-06-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* doc/clutter-actor-invariants.txt: Fix grammar and spelling,
	document the ::parent-set signal emission.

2008-06-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-entry.c:
	(clutter_entry_ensure_layout): Convert the invisible char
	to UTF-8 to avoid Pango barfing on us.

2008-06-24  Matthew Allum  <mallum@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c:
	Add an extra debug note.
	* configure.ac:
	Generate version.xml for COGL API docs

2008-06-24  Chris Lord  <chris@openedhand.com>

	Bug 988 - cursor position wrong with multibyte invisible char

	* clutter/clutter-entry.c: (clutter_entry_ensure_cursor_position):
	Fix cursor position calculation when using invisible text

2008-06-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/x11/clutter-event-x11.c (event_translate): Set the
	event type explicitly in the union members as well for the
	key events, like we do for all the other events.

2008-06-23  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-entry.c (clutter_entry_paint): Set the clip
	using COGL directly instead of setting the actor clip. Otherwise
	the clip stack will be unbalanced after the first draw. This also
	frees up the actor clip to be set by an application.

2008-06-23  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	Add a quick note on fruity multiple deivce support.
	* README:
	Add multiple device support details and some tweaks on
	Clutter requirements (i.e GdkPixbuf).

2008-06-23  Matthew Allum  <mallum@openedhand.com>

	Bug 987 - clutter-event.c c99 variable declaration

	* clutter/clutter-event.c:
	Remove c99ism.

2008-06-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.7.3.

======== Release 0.7.2 ========================================================
